src/gwt/public/landing/landing.css
/**
 * $Id: me.css 10021 2008-07-24 20:53:18Z sarah $
 *
 * Styles for Landing pages.
 */

/* ------------------------------------
   BLUE LANDING PAGE GENERAL DESIGN (SHARED)
-------------------------------------*/

/* Spans the entire width of the page */
.BlueLandingPage {
  background: #073448;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 13px;
  color: #083b51;
}
.BlueLandingPage a {
  color: #083b51;
}

.BlueLandingPage .Header {
  margin: 0 auto;
}

.BlueLandingPage p {
  margin: 10px 20px;
  line-height: 20px;
}

.BlueLandingPage ul,
.BlueLandingPage ol {
  line-height: 20px;
}

.BlueLandingPage h3 {
  font-size: 17px;
  font-weight: bold;
  font-family: "Trebuchet MS",Arial,Helvetica,sans-serif;
  margin: 25px 0 10px 0;
}

.BlueLandingPage .Content {
  background: url(/images/landing/blue_landing_content_bg.png) repeat-y top center;
  width: 899px;
  margin: 0 auto;
  min-height: 100%;
  padding-bottom: 20px;
}

.BlueLandingPage .Footer {
  background-color: #76c4e7;
  width: 100%;
  height: 50px;
  border-top: #caecfc 3px solid;
  position: relative;
}

.BlueLandingPage .Footer .LandingCopyright {
  margin: 10px auto;
  background-color: transparent;
}

/* ------------------------------------
   WIDE CONTENT BOX (SHARED)
-------------------------------------*/

.wideContentBox {
  width: 809px;
  margin: 15px auto;
}

.wideContentBox .BoxContent {
  background: #FFFFFF url(/images/landing/wide_content_box_bg.png) repeat-y;
  padding: 5px 20px;
}

.wideContentBox .BoxTop {
  background: url(/images/landing/wide_content_box_top.png) no-repeat;
  height: 12px;
}

.wideContentBox .BoxBottom {
  background: url(/images/landing/wide_content_box_bottom.png) no-repeat;
  height: 13px;
}

.wideContentBox .Title,
.wideContentBox .TitleAlt {
  font-size: 26px;
  font-weight: bold;
  font-family: "Trebuchet MS",Arial,Helvetica,sans-serif;
  color: #ff752a;
  margin: 0 0 10px 0;
}

.wideContentBox .TitleAlt {
  color: #3595b7;
}

/* ------------------------------------
   LANDING PAGE
-------------------------------------*/

/* Spans the entire width of the page */
.LandingPanel {
  background: #63ABD3 url(/images/landing/bg_gradient.jpg) repeat-x top center;
  width: 100%;
  height: 1044px;
  position: absolute;
  top: 0;
  left: 0;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 12px;
}

/* Spans the width of the page to position a flourish that trails off to the right */
.LandingBackground {
  background: transparent url(/images/landing/splash_right.png) no-repeat top center;
  width: 100%;
  height: 1044px;
}

.LandingBackgroundCompact {
  background: transparent url(/images/landing/small_banner.jpg) no-repeat top center;
  width: 100%;
  height: 785px;
}

/* Centered in the middle of the page */
.LandingContent {
  width: 800px;
  height: 1044px;
  margin: auto;
}

/* Centered in the middle of the page */
.LandingContentCompact {
  width: 800px;
  height: 785px;
  margin: auto;
}

.LandingPanel .Video {
  width: 360px;
  height: 200px;
}

.LandingPanel .LandingTagline {
  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
  font-size: 18px;
  color: #FFFFFF;
}

.LandingPanel .Background {
  height: 717px;
}

.LandingPanel .Background .LeftBorder {
  background: url(/images/landing/stripe_tile.png) repeat-y top right;
  width: 57px;
  float: left;
  height: 100%;
}

.LandingPanel .Background .Center {
  background: #C7E4F6 url(/images/landing/overlay_gradient.jpg) repeat-x top center;
  width: 690px;
  float: left;
  height: 100%;
}
.LandingPanel .Background .RightBorder {
  background: url(/images/landing/stripe_tile.png) repeat-y top left;
  width: 53px;
  float: left;
  height: 100%;
}


/* ------------------------------------
   LANDING PAGE - LOGON PANEL (SHARED BY MULTIPLE PAGES)
-------------------------------------*/

.logonPanel {
  background: url(/images/landing/logon_bg.png) no-repeat top center;
  width: 170px;
  height: 60px;
}

.logonPanel .gwt-TextBox,
.logonPanel .gwt-PasswordTextBox {
  font-size: 13px;
  color: #666666;
  width: 145px;
  margin-left: 7px;
  border: solid #2E729F 1px;
}

.logonPanel .gwt-PasswordTextBox {
  width: 91px;
  margin-top: -5px;
}

.logonPanel .tipLabel {
  position: absolute;
  top: 60px;
  left: 120px;
  color: #2E729F;
  font-size: 11px;
}

.LogonButton {
  font-size: 13px;
  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
  background: url(/images/landing/logon_button_bg.png) no-repeat top center;
  width: 50px;
  height: 21px;
  padding-top: 3px;
  color: #FFFFFF;
  border-spacing: 0;
  position: absolute;
  top: 33px;
  left: 112px;
}

.JoinButton {
  background: url(/images/landing/join_now_button.png) no-repeat top center;
  width: 99px;
  height: 67px;
  border: none;
}

/* ------------------------------------
   LANDING PAGE - TOP GAMES
-------------------------------------*/

.LandingPanel .TopGamesPanel {
  width: 650px;
  height: 275px;
}

.LandingPanel .TopGamesPanel .TopGamesHeader {
  width: 202px;
  height: 27px;
  background: url(/images/landing/topgames_header.png) no-repeat top center;
}

.LandingPanel .TopGamesPanel .GameListItem,
.LandingPanel .TopGamesPanel .GameListItemSelected {
  background: url(/images/landing/topgames_singlebox.jpg) no-repeat top center;
  width: 202px;
  cursor: pointer;
  border-bottom: solid 1px #9CC0D6;
}
.LandingPanel .TopGamesPanel .GameListItemSelected {
  border-bottom: solid 1px #72AACD;
}

.LandingPanel .TopGamesPanel .GameListItem td,
.LandingPanel .TopGamesPanel .GameListItemSelected td {
  height: 49px;
}

.LandingPanel .TopGamesPanel .GameListItemSelected {
  background: url(/images/landing/topgames_singlebox_select.jpg) no-repeat top center;
}

.LandingPanel .TopGamesPanel .GameListItem .Thumbnail,
.LandingPanel .TopGamesPanel .GameListItemSelected .Thumbnail {
  float: left;
  width: 55px;
  text-align: center;
  vertical-align: middle;
}
/* ... */

